# pycrdt-store

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: test.yml
src/pycrdt/store/: __init__.py  base.py  file.py  sqlite.py  store.py  utils.py
tests/: test_store.py
